# Sentinel

./: .dockerignore  .env.example  .gitignore  .sentinel-1.3.part-00  .sentinel-1.3.part-01  .sentinel-1.3.part-02  .sentinel-1.3.part-02-0  .sentinel-1.3.part-02-1  .sentinel-1.3.part-02-2  .sentinel-1.3.part-02-3  .sentinel-1.3.part-03  .sentinel-1.4.part-00  .sentinel-1.4.part-01  .sentinel-1.4.part-02  .sentinel-1.4.part-03  .sentinel-1.4.part-04  .sentinel-1.4.part-05  .sentinel-1.4.part-06  .sentinel-1.4.part-07  .sentinel-1.4.part-08  .sentinel-1.4.part-09  .sentinel-1.4.part-10  .sentinel-1.4.part-11  .sentinel-1.4.part-12  .sentinel-1.4.part-13  .sentinel-1.4.part-14  .sentinel-1.5.part-00  .sentinel-1.5.part-01  .sentinel-1.5.part-02  .sentinel-1.5.part-03  .sentinel-1.5.part-04  .sentinel-1.5.part-05  .sentinel-1.5.part-06  .sentinel-1.6.part-00  .sentinel-1.6.part-01  .sentinel-1.6.part-02  .sentinel-1.6.part-03  .sentinel-1.6.part-04  .sentinel-1.6.part-05  .sentinel-1.6.part-06  (+22 more)
.bootstrap/: part-00  part-000  part-001  part-002  part-003  part-004  part-005  part-006  part-007  part-008  part-009  part-01  part-010-0  part-010-1  part-010-2  part-02  part-03a  part-03b  part-04  part-05  part-06  part-07  part-08  part-09  part-10  part-11  part-12  part-13  part-14  part-15  part-16  part-17  part-18  part-19  part-20  part-21  part-22  part-23  part-24  part-25  (+49 more)
app/: cli.py  main.py
docs/: ARCHITECTURE.md  BASELINE_COMPARISON.md  BUILD_LOG.md  CONTROL_PLANE.md  DEVPOST_SUBMISSION.md  EVALUATION.md  EVIDENCE_BUNDLE.md  JUDGE_GUIDE.md  LINEAGE_AND_CI.md  (+14 more)
(+279 files in other folders)
