[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "sentinel-agent"
version = "1.5.0"
description = "Human-in-the-loop autonomous security review agent powered by GPT-5.6"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<1",
  "uvicorn[standard]>=0.35,<1",
  "sqlalchemy[asyncio]>=2.0.41,<3",
  "asyncpg>=0.30,<1",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "jinja2>=3.1.6,<4",
  "openai>=1.93,<2",
  "aiofiles>=24.1,<25",
  "httpx>=0.28,<1",
]

[project.scripts]
sentinel-check-delta = "app.services.ci_gate_client:cli"

[project.optional-dependencies]
dev = [
  "pytest>=8.4,<9",
  "pytest-asyncio>=1.0,<2",
  "ruff>=0.12,<1",
  "aiosqlite>=0.21,<1",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["B008"]
